fix: better more consistent content spacing

--- a/styles.css
+++ b/styles.css
@@ -196,8 +196,8 @@ button:hover {
     background-color: rgb(var(--color-slate-300));
     grid-area: content;
     display: flex;
-    padding: 1em;
-    padding-top: 2em;
+    padding: 2rem;
+    padding-top: 2rem;
     gap: 1rem;
 }
 
@@ -264,6 +264,7 @@ button:hover {
 
 .announcements {
     grid-area: announcements;
+    margin-left: 1rem
 }
 
 .announcement-container {
@@ -300,6 +301,7 @@ button:hover {
 .trending {
     grid-area: trending;
     margin-bottom: auto;
+    margin-left: 1rem
 }
 
 .trending-container {
